--- a/unidades de medida/index.html
+++ b/unidades de medida/index.html
@@ -1,12 +1,21 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon"  href="icono.png" type="image/png">
     <title>unidades de medida</title>
 </head>
 <body>
-    <div>
-        <h1>TITULO</h1> <samn>(Hace un momento)</samn> 
-        <p>
+    <div class="card">
+        <img class="img" src="https://lh3.googleusercontent.com/a/ACg8ocK9zyexVFEdW70EcoG1hJH_pZ6RPPDJ1H9IiODL_RxK1f8tiSqr=s288-c-no">
+        <h1 class="title">TITULO</h1>
+        <h2 class="subtitle">(Hace un momento)</h2>
+        <p class="content">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Autem expedita eligendi voluptatibus at asperiores dolor rerum aut,
+    dolorum, omnis rem laboriosam aliquid, sunt minus! Nobis quisquam ducimus facilis corporis maxime!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Autem expedita eligendi voluptatibus at asperiores dolor rerum aut,
+    dolorum, omnis rem laboriosam aliquid, sunt minus! Nobis quisquam ducimus facilis corporis maxime!
     Lorem ipsum dolor sit amet consectetur adipisicing elit.
     Autem expedita eligendi voluptatibus at asperiores dolor rerum aut,
     dolorum, omnis rem laboriosam aliquid, sunt minus! Nobis quisquam ducimus facilis corporis maxime!
