--- a/ss/index.html
+++ b/ss/index.html
@@ -6,19 +6,21 @@
     <title>ss</title>
 </head>
 <body>
-   
     <form> 
         <h2>Formulario De Contacto</h2>
         
+        <fieldset>
+            <legend>INFORMACION</legend>
+            <div class="input">
+            <input type="text" placeholder="Nombre completo" id="nombre">
+            </div>
+            <div class="input">
+            <input type="email" placeholder="Email">
+            </div>
+        </fieldset>
+        <label for="nombre">.Ingresa Texto!!!</label>
         <div class="input">
-            <label for="nombre">.Ingresa!!!</label>
-            <input type="text" placeholder="nombre completo" id="nombre">
-        </div>
-        <div class="input">
-            <input type="email" placeholder="email">
-        </div>
-        <div class="input">
-            <textarea rows="8" placeholder="comenta!"> </textarea>
+            <textarea rows="7" placeholder="comenta!"> </textarea>
         </div>
     </form>
 </body>
